# qqveqq

./: Cargo.toml  flake.nix
calibration_ui/: Cargo.toml
calibration_ui/.zed/: settings.json
calibration_ui/src/: main.rs
qvis/: Cargo.toml  cv-pipeline.md
qvis/src/: inference.rs  lib.rs
qvis/src/cv/: assignment.rs  inference.rs  mod.rs
qvis/src/puzzle_matching/: hungarian_algorithm.rs  mod.rs
qvis_app/: Cargo.toml  Makefile.toml  TODO.md  index.html  leptosfmt.toml  package-lock.json  package.json  qvis_appCA-key.pem  qvis_appCA.pem
qvis_app/.zed/: settings.json
qvis_app/src/: app.rs  calibration_ui.rs  lib.rs  log_error_panic_hook.rs  main.rs  messages_logger.rs  pixel_assignment_ui.rs  server_fns.rs  take_picture.rs  video.rs
src/: hungarian_algorithm.rs  lib.rs
