[package]
name = "qvis"
version = "0.1.0"
edition = "2024"

[dependencies]
internment = { version = "0.8.6", features = ["arc", "serde"] }
itertools = "0.14.0"
kiddo = { version = "5.2.4", features = ["serde"] }
ndarray = "0.17.1"
puzzle_theory = { git = "https://github.com/qter-project/puzzle-theory", features = [ "rand", "serde" ] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "rc"] }
rand = "0.9.2"
