[package]
name = "qvis_app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = "0.8.15"
bytes = "1.11.0"
qvis = { path = "../qvis" }
puzzle_theory = { git = "https://github.com/qter-project/puzzle-theory", features = ["serde"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
log = "0.4.29"
wasm-bindgen = "^0.2"
leptos_ws = "0.9.7"
send_wrapper = "0.6.0"
server_fn = { version = "0.8.9", features = ["multipart"] }
serde = "1.0.228"
tokio = "1.49.0"
leptos_axum = { version = "0.8.7", optional = true }
axum = { version = "0.8.8", features = ["macros"], optional = true }
internment = { version = "0.8.6", features = ["arc"] }
rand = "0.9.2"
wasm-bindgen-futures = "0.4.58"

[dependencies.leptos-use]
git = "https://github.com/Synphonyte/leptos-use"
rev = "67b953d"
features = ["use_event_listener"]

[dependencies.opencv]
version = "0.98.1"
default-features = false
features = ["highgui", "imgcodecs", "imgproc"]
optional = true

[dependencies.web-sys]
version = "0.3.83"
features = [
    "MediaDeviceInfo",
    "HtmlElement",
    "CssStyleDeclaration",
    "CanvasRenderingContext2d",
    "ImageData",
    "MediaDeviceKind",
    "ConstrainDomStringParameters"
]

[features]
hydrate = [
    "leptos/hydrate",
    "leptos_ws/hydrate",
    "tokio/sync"
]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:opencv",
    "leptos/ssr",
    "leptos_ws/ssr",
    "leptos-use/ssr"
]

[package.metadata.leptos]
lib-features = ["hydrate"]
bin-features = ["ssr"]
tailwind-input-file = "input.css"
site-addr = "0.0.0.0:3000"
assets-dir = "public"
